# rotab

./: .gitignore  .python-version  LICENCE  README.md  pyproject.toml  tox.ini
examples/: run_example.py
examples/config/: example.yaml  main_template.yaml  trans_summary.yaml  user_filter.yaml
examples/config/params/: param.yaml  params.yaml
examples/config/schemas/: filtered_transactions.yaml  filtered_users.yaml  final_output.yaml  (+2 more)
examples/custom_functions/: derive_funcs_polars.py
examples/data/: transaction.csv
examples/output/: filtered_transactions.csv  filtered_users.csv  final_output.csv
examples/scripts/: generated_user_flow.py
examples/source/: mermaid.mmd
examples/source_pandas/: main.py
examples/source_polars/: mermaid.mmd
testproject/custom_functions/: derive_funcs_polars.py  transform_funcs_polars.py
tests/: conftest.py  test_aaa.py  test_dataframes_funcs.py  test_define_funcs.py  test_derive_funcs.py  test_get_dependencies.py  test_new_columns_funcs.py  test_transform_funcs.py  test_validator copy.py  test_validator.py
tests/cli/: test_cli.py
tests/loader/: test_macro_expander.py  test_parameter_resolver.py  test_schema_manager.py
tests/model/: test_training_function.py
tests/parce/: test_parce_derive_expr.py  test_parce_filter_expr.py
tests/runtime/: test_code_generator.py  test_context_builder.py  test_dag_generator.py  test_pipeline_codegen.py  test_pipeline_execution.py
tests/steps/: test_io.py  test_mutate_step.py  test_mutate_step_generate_script_polars.py  test_process.py  test_template.py  test_transform_step.py
(+90 files in other folders)
