[tool.poetry]
name = "rotab"
version = "0.1.0"
description = "RoTab; a template that moves with your thinking."
packages = [{ include = "rotab", from = "src" }]
authors = ["yuta.itatsu <yuta.itatsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
jinja2 = "^3.1.6"
pydantic = "^2.11.5"
typer = "^0.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
tox = "^4.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rotab = "rotab.cli.cli:main"
